{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 270,
  "lineage": "22fc4f31-c49d-0a2d-3c8c-0410c97892e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "spotlike_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:loadbalancer/app/spotlike-alb/c9b69d79d2d2ea4e",
            "arn_suffix": "app/spotlike-alb/c9b69d79d2d2ea4e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "spotlike-alb-1999405060.eu-west-3.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:loadbalancer/app/spotlike-alb/c9b69d79d2d2ea4e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "spotlike-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c604e14519fedd9b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04f47561dafd21550"
              },
              {
                "subnet_id": "subnet-0b5aaef755b61faaa"
              },
              {
                "subnet_id": "subnet-0e6ff25972047cf3c"
              }
            ],
            "subnets": [
              "subnet-04f47561dafd21550",
              "subnet-0b5aaef755b61faaa",
              "subnet-0e6ff25972047cf3c"
            ],
            "vpc_id": "vpc-0341ffe825151fe0b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z3Q77PNBQS71R4"
          },
          "dependencies": [
            "aws_security_group.spotlike_alb_sg",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:listener/app/spotlike-alb/c9b69d79d2d2ea4e/a12fcedf4230889c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:targetgroup/spotlike-frontend-tg/6e405cf22dcd443e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:listener/app/spotlike-alb/c9b69d79d2d2ea4e/a12fcedf4230889c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:loadbalancer/app/spotlike-alb/c9b69d79d2d2ea4e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.spotlike_alb",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.spotlike_alb_sg",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "api_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:targetgroup/spotlike-api-tg/eee15902a5a76ce7",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:listener-rule/app/spotlike-alb/c9b69d79d2d2ea4e/a12fcedf4230889c/18b397a4808e72a0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*",
                      "/docs"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:listener-rule/app/spotlike-alb/c9b69d79d2d2ea4e/a12fcedf4230889c/18b397a4808e72a0",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:listener/app/spotlike-alb/c9b69d79d2d2ea4e/a12fcedf4230889c",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.spotlike_alb",
            "aws_lb_listener.http_listener",
            "aws_lb_target_group.api_tg",
            "aws_lb_target_group.frontend_tg",
            "aws_security_group.spotlike_alb_sg",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:targetgroup/spotlike-api-tg/eee15902a5a76ce7",
            "arn_suffix": "targetgroup/spotlike-api-tg/eee15902a5a76ce7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:targetgroup/spotlike-api-tg/eee15902a5a76ce7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:362789396136:loadbalancer/app/spotlike-alb/c9b69d79d2d2ea4e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "spotlike-api-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": false,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:targetgroup/spotlike-frontend-tg/6e405cf22dcd443e",
            "arn_suffix": "targetgroup/spotlike-frontend-tg/6e405cf22dcd443e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 60,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-3:362789396136:targetgroup/spotlike-frontend-tg/6e405cf22dcd443e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-3:362789396136:loadbalancer/app/spotlike-alb/c9b69d79d2d2ea4e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "spotlike-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
                "enable_unhealthy_connection_termination": false,
                "unhealthy_draining_interval": 0
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spotlike_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:security-group/sg-0c604e14519fedd9b",
            "description": "Allow inbound traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c604e14519fedd9b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "spotlike-alb-sg",
            "name_prefix": "",
            "owner_id": "362789396136",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spotlike_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:security-group/sg-07f637aef4494bb72",
            "description": "Allow PostgreSQL inbound traffic from ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07f637aef4494bb72",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba17d35e5e4ec59f"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "spotlike-db-sg",
            "name_prefix": "",
            "owner_id": "362789396136",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.spotlike_ecs_sg",
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "spotlike_ecs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:security-group/sg-0ba17d35e5e4ec59f",
            "description": "Allow inbound traffic to ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba17d35e5e4ec59f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": null,
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "spotlike-ecs-sg",
            "name_prefix": "",
            "owner_id": "362789396136",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:network-acl/acl-06ace63df57d4b792",
            "default_network_acl_id": "acl-06ace63df57d4b792",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06ace63df57d4b792",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "362789396136",
            "subnet_ids": [
              "subnet-01ac3bc30105c4643",
              "subnet-04f47561dafd21550",
              "subnet-0b5aaef755b61faaa",
              "subnet-0d68beba793b81335",
              "subnet-0e6ff25972047cf3c",
              "subnet-0eda7d29c01adbee6"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-default",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-default",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:route-table/rtb-05b8bcf0a78799138",
            "default_route_table_id": "rtb-05b8bcf0a78799138",
            "id": "rtb-05b8bcf0a78799138",
            "owner_id": "362789396136",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-default",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-default",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:security-group/sg-07d94dbd303c8f4a8",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-07d94dbd303c8f4a8",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "362789396136",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-default",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-default",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fcd431544cb5cd6",
            "arn": "arn:aws:ec2:eu-west-3:362789396136:elastic-ip/eipalloc-09fcd431544cb5cd6",
            "association_id": "eipassoc-0a58baea008f3b143",
            "domain": "vpc",
            "id": "eipalloc-09fcd431544cb5cd6",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-0d13b9c64c6fa9686",
            "private_dns": "ip-10-0-101-8.eu-west-3.compute.internal",
            "private_ip": "10.0.101.8",
            "public_dns": "ec2-35-181-164-141.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.164.141",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc_spotlike.aws_internet_gateway.this",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:internet-gateway/igw-077ca74bcfb69bbfe",
            "id": "igw-077ca74bcfb69bbfe",
            "owner_id": "362789396136",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09fcd431544cb5cd6",
            "association_id": "eipassoc-0a58baea008f3b143",
            "connectivity_type": "public",
            "id": "nat-0c50fcb011073c83f",
            "network_interface_id": "eni-0d13b9c64c6fa9686",
            "private_ip": "10.0.101.8",
            "public_ip": "35.181.164.141",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e6ff25972047cf3c",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc_spotlike.aws_eip.nat",
            "module.vpc_spotlike.aws_internet_gateway.this",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "database_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "elasticache_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "intra_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "outpost_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "private_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "public_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "redshift_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_dns64_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-035aa7062fa26aa9a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c50fcb011073c83f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-035aa7062fa26aa9a",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_eip.nat",
            "module.vpc_spotlike.aws_internet_gateway.this",
            "module.vpc_spotlike.aws_nat_gateway.this",
            "module.vpc_spotlike.aws_route_table.private",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-077ca74bcfb69bbfe",
            "id": "r-rtb-08d63e1a07cd56b411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08d63e1a07cd56b41",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_internet_gateway.this",
            "module.vpc_spotlike.aws_route_table.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:route-table/rtb-035aa7062fa26aa9a",
            "id": "rtb-035aa7062fa26aa9a",
            "owner_id": "362789396136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c50fcb011073c83f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:route-table/rtb-08d63e1a07cd56b41",
            "id": "rtb-08d63e1a07cd56b41",
            "owner_id": "362789396136",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077ca74bcfb69bbfe",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-029a06582f4822e04",
            "route_table_id": "rtb-035aa7062fa26aa9a",
            "subnet_id": "subnet-0d68beba793b81335"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_route_table.private",
            "module.vpc_spotlike.aws_subnet.private",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-058897869963e31ee",
            "route_table_id": "rtb-035aa7062fa26aa9a",
            "subnet_id": "subnet-01ac3bc30105c4643"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_route_table.private",
            "module.vpc_spotlike.aws_subnet.private",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0305eea5ee62f84d5",
            "route_table_id": "rtb-035aa7062fa26aa9a",
            "subnet_id": "subnet-0eda7d29c01adbee6"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_route_table.private",
            "module.vpc_spotlike.aws_subnet.private",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-012bc35fcee2c27b0",
            "route_table_id": "rtb-08d63e1a07cd56b41",
            "subnet_id": "subnet-0e6ff25972047cf3c"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_route_table.public",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f16742f2d86920e8",
            "route_table_id": "rtb-08d63e1a07cd56b41",
            "subnet_id": "subnet-04f47561dafd21550"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_route_table.public",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-076308f20c2a1e85e",
            "route_table_id": "rtb-08d63e1a07cd56b41",
            "subnet_id": "subnet-0b5aaef755b61faaa"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_route_table.public",
            "module.vpc_spotlike.aws_subnet.public",
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:subnet/subnet-0d68beba793b81335",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d68beba793b81335",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362789396136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:subnet/subnet-01ac3bc30105c4643",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01ac3bc30105c4643",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362789396136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private-eu-west-3b",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private-eu-west-3b",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:subnet/subnet-0eda7d29c01adbee6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eda7d29c01adbee6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "362789396136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private-eu-west-3c",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-private-eu-west-3c",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:subnet/subnet-0e6ff25972047cf3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e6ff25972047cf3c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "362789396136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public-eu-west-3a",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:subnet/subnet-04f47561dafd21550",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3b",
            "availability_zone_id": "euw3-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f47561dafd21550",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "362789396136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public-eu-west-3b",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public-eu-west-3b",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:subnet/subnet-0b5aaef755b61faaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5aaef755b61faaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "362789396136",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public-eu-west-3c",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc-public-eu-west-3c",
              "Project": "spotlike",
              "Terraform": "true",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0341ffe825151fe0b"
          },
          "dependencies": [
            "module.vpc_spotlike.aws_vpc.this",
            "module.vpc_spotlike.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.vpc_spotlike",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:362789396136:vpc/vpc-0341ffe825151fe0b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06ace63df57d4b792",
            "default_route_table_id": "rtb-05b8bcf0a78799138",
            "default_security_group_id": "sg-07d94dbd303c8f4a8",
            "dhcp_options_id": "dopt-00eed9efe8ee25b92",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0341ffe825151fe0b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b8bcf0a78799138",
            "owner_id": "362789396136",
            "tags": {
              "Environment": "dev",
              "Name": "spotlike-vpc",
              "Project": "spotlike",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "spotlike-vpc",
              "Project": "spotlike",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}